edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "storage/user.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message InitBundleMeta {
  enum InitBundleVersion {
    INIT_BUNDLE = 0;
    CRS = 1;
  }
  string id = 1; // @gotags: sql:"pk"
  string name = 2;
  google.protobuf.Timestamp created_at = 3 [lazy = true];
  User created_by = 4;
  bool is_revoked = 5;
  google.protobuf.Timestamp expires_at = 6 [lazy = true];
  InitBundleVersion version = 7;
}
